<resources>
    <string name="app_name">Jacko\'s Buddies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="browse">Browse</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="limit">Limit</string>
    <string name="apply">apply</string>
    <string name="size">Size</string>
    <string name="small">small</string>
    <string name="med">medium</string>
    <string name="full">full</string>
    <string name="imageSize">Image Size</string>
    <string name="has_breeds">Has Breeds</string>
    <string name="categories">Categories</string>
    <string name="select_categories">Select Categories</string>
    <string name="select_breed">Select Breed</string>
    <string name="breeds">Breeds</string>
</resources>