<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.jackosbuddies.view.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_slider_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/slider_limit"
        android:text="@string/limit"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="10.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintTop_toBottomOf="@id/label_slider_limit" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/radio_group"
        android:text="@string/imageSize"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_limit" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/full"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_radio_group"
        app:layout_constraintTop_toBottomOf="@id/slider_limit"
        app:layout_constraintBottom_toTopOf="@id/breed_switch">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/full"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/full"
            android:transitionName="@string/full"/>

        <com.google.android.material.radiobutton.MaterialRadioButton

            android:id="@+id/med"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/med"
            android:transitionName="@string/med"/>

        <com.google.android.material.radiobutton.MaterialRadioButton

            android:id="@+id/small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/small"
            android:transitionName="@string/small"/>
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/breed_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/has_breeds"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_apply"
        app:layout_constraintHorizontal_bias="0.0"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>